--- a/package.json
+++ b/package.json
@@ -1,101 +1,109 @@
 {
-	"name": "next-suir",
-	"version": "0.0.1",
-	"main": "src/client/index.jsx",
-	"description": "Next.js + React-Semantic.UI",
-	"dependencies": {
-		"@mdx-js/mdx": "^0.8.0",
-		"@zeit/next-css": "^0.1.5",
-		"@zeit/next-sass": "^0.1.2",
-		"@zeit/next-source-maps": "0.0.2",
-		"babel-polyfill": "^6.26.0",
-		"cross-env": "^5.1.4",
-		"isomorphic-fetch": "^2.2.1",
-		"lodash": "^4.17.10",
-		"next": "^5.1.0",
-		"optimize-js-plugin": "0.0.4",
-		"react": "^16.3.2",
-		"react-dom": "^16.3.2",
-		"react-redux": "^5.0.7",
-		"redux": "^4.0.0",
-		"redux-devtools-extension": "^2.13.2",
-		"redux-thunk": "^2.2.0",
-		"semantic-ui-css": "^2.3.1",
-		"semantic-ui-react": "^0.79.1",
-		"serialize-javascript": "^1.5.0",
-		"styled-components": "^3.2.6",
-		"webpack": "^3.10.0",
-		"webpack-manifest-plugin": "^2.0.1"
-	},
-	"devDependencies": {
-		"@mdx-js/loader": "^0.8.0",
-		"autoprefixer": "^8.4.1",
-		"babel-cli": "^6.26.0",
-		"babel-core": "^6.26.3",
-		"babel-eslint": "^8.2.3",
-		"babel-loader": "^7.1.4",
-		"babel-plugin-dynamic-import-node": "^1.2.0",
-		"babel-plugin-lodash": "^3.3.2",
-		"babel-plugin-module-resolver": "^3.1.1",
-		"babel-plugin-styled-components": "^1.5.1",
-		"babel-plugin-syntax-dynamic-import": "^6.18.0",
-		"babel-preset-env": "^1.6.1",
-		"babel-preset-flow": "^6.23.0",
-		"babel-preset-react": "^6.24.1",
-		"babel-preset-react-optimize": "^1.0.1",
-		"babel-preset-stage-0": "^6.24.1",
-		"babel-register": "6.26.0",
-		"babel-runtime": "^6.26.0",
-		"caniuse-lite": "^1.0.30000832",
-		"css-loader": "^0.28.11",
-		"eslint": "^4.19.1",
-		"eslint-config-standard": "^11.0.0",
-		"eslint-loader": "^2.0.0",
-		"eslint-plugin-babel": "^5.1.0",
-		"eslint-plugin-flowtype": "^2.46.3",
-		"eslint-plugin-import": "^2.11.0",
-		"eslint-plugin-node": "^6.0.1",
-		"eslint-plugin-promise": "^3.7.0",
-		"eslint-plugin-react": "^7.7.0",
-		"eslint-plugin-standard": "^3.1.0",
-		"file-loader": "^1.1.11",
-		"flow-bin": "^0.71.0",
-		"node-sass": "^4.9.0",
-		"postcss": "^6.0.22",
-		"postcss-browser-reporter": "^0.5.0",
-		"postcss-cssnext": "^3.1.0",
-		"postcss-import": "^11.1.0",
-		"postcss-loader": "^2.1.4",
-		"postcss-reporter": "^5.0.0",
-		"postcss-svg": "^2.4.0",
-		"postcss-url": "^7.3.2",
-		"redux-mock-store": "^1.5.1",
-		"standard-version": "^4.3.0",
-		"url-loader": "^1.0.1"
-	},
-	"scripts": {
-		"dev": "cross-env next",
-		"build": "cross-env next build",
-		"start": "cross-env next start -p ${PORT:=3000}",
-		"lint:scripts": "cross-env eslint -c ./.eslintrc ./src ./webpack_config --ignore-pattern dist",
-		"flow": "flow",
-		"release": "standard-version"
-	},
-	"engines": {
-		"node": ">=8"
-	},
-	"author": {
-		"name": "Vladimir Metnew",
-		"email": "vladimirmetnew@gmail.com"
-	},
-	"license": "MIT",
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/Metnew/next-semantic-ui-react.git"
-	},
-	"keywords": ["react", "redux", "react-redux", "next.js", "next", "semantic-ui", "semantic-ui-react"],
-	"bugs": {
-		"url": "https://github.com/Metnew/next-semantic-ui-react/issues"
-	},
-	"homepage": "https://github.com/Metnew/next-semantic-ui-react#readme"
+  "name": "next-suir",
+  "version": "0.0.2",
+  "main": "src/client/index.jsx",
+  "description": "Next.js + React-Semantic.UI",
+  "dependencies": {
+    "@mdx-js/mdx": "^0.8.0",
+    "@zeit/next-css": "^0.1.5",
+    "@zeit/next-sass": "^0.1.2",
+    "@zeit/next-source-maps": "0.0.2",
+    "babel-polyfill": "^6.26.0",
+    "cross-env": "^5.1.4",
+    "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.10",
+    "next": "^5.1.0",
+    "optimize-js-plugin": "0.0.4",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-react": "^0.79.1",
+    "serialize-javascript": "^1.5.0",
+    "styled-components": "^3.2.6",
+    "webpack": "^3.10.0",
+    "webpack-manifest-plugin": "^2.0.1"
+  },
+  "devDependencies": {
+    "@mdx-js/loader": "^0.8.0",
+    "autoprefixer": "^8.4.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-module-resolver": "^3.1.1",
+    "babel-plugin-styled-components": "^1.5.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-optimize": "^1.0.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "6.26.0",
+    "babel-runtime": "^6.26.0",
+    "caniuse-lite": "^1.0.30000832",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-babel": "^5.1.0",
+    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "file-loader": "^1.1.11",
+    "flow-bin": "^0.71.0",
+    "node-sass": "^4.9.0",
+    "postcss": "^6.0.22",
+    "postcss-browser-reporter": "^0.5.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.4",
+    "postcss-reporter": "^5.0.0",
+    "postcss-svg": "^2.4.0",
+    "postcss-url": "^7.3.2",
+    "redux-mock-store": "^1.5.1",
+    "standard-version": "^4.3.0",
+    "url-loader": "^1.0.1"
+  },
+  "scripts": {
+    "dev": "cross-env next",
+    "build": "cross-env next build",
+    "start": "cross-env next start -p ${PORT:=3000}",
+    "lint:scripts": "cross-env eslint -c ./.eslintrc ./src ./webpack_config --ignore-pattern dist",
+    "flow": "flow",
+    "release": "standard-version"
+  },
+  "engines": {
+    "node": ">=8"
+  },
+  "author": {
+    "name": "Vladimir Metnew",
+    "email": "vladimirmetnew@gmail.com"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Metnew/next-semantic-ui-react.git"
+  },
+  "keywords": [
+    "react",
+    "redux",
+    "react-redux",
+    "next.js",
+    "next",
+    "semantic-ui",
+    "semantic-ui-react"
+  ],
+  "bugs": {
+    "url": "https://github.com/Metnew/next-semantic-ui-react/issues"
+  },
+  "homepage": "https://github.com/Metnew/next-semantic-ui-react#readme"
 }
